# lircst-data

./: .gitignore  CMakeLists.txt  main.cc
include/: AccumulableMap.hh  ActionInitialisation.hh  BMPMini.hh  BetaSpectrum.hh  BiasingOperation.hh  BiasingOperator.hh  CeleritasGlobals.hh  DetectorConstruction.hh  EnergySpectScorer.hh  EventAction.hh  GroundTruthExporter.hh  ParallelWorldConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RandPhanGen.hh  Run.hh  RunAction.hh  RunManager.hh  SensitiveDetector.hh  Util.hh
macro/: vis.mac
src/: AccumulableMap.cc  ActionInitialisation.cc  ActionInitialisation.cpp  BiasingOperation.cc  BiasingOperator.cc  CeleritasGlobals.cc  DetectorConstruction.cc  EnergySpectScorer.cc  EventAction.cc  GroundTruthExporter.cc  ParallelWorldConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RandPhanGen.cc  Run.cc  RunAction.cc  RunManager.cc  SensitiveDetector.cc  Util.cc
